--- a/index.html
+++ b/index.html
@@ -1,38 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  
 <head>
-<title>Blue Box Game</title>
-<style>
-body {
-  background-color: black;
-}
-
-.blue-box {
-  width: 100px;
-  height: 100px;
-  background-color: blue;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.green-box {
-  width: 50px;
-  height: 50px;
-  background-color: green;
-  position: absolute;
-}
-
-.score {
-  color: white;
-  font-size: 20px;
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content=
+        "width=device-width, initial-scale=1.0">
+    <title>PONG GAME</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+  
 <body>
-<div class="blue-box"></div>
-<div class="green-box"></div>
-<div class="green-box"></div>
-<div class="score">Score: 2</div>
+    <div class="board">
+        <div class='ball'>
+            <div class="ball_effect"></div>
+        </div>
+        <div class="paddle_1 paddle"></div>
+        <div class="paddle_2  paddle"></div>
+        <h1 class="player_1_score">0</h1>
+        <h1 class="player_2_score">0</h1>
+        <h1 class="message">
+            Press Enter to Play Pong
+        </h1>
+    </div>
+      
+    <script src="index.js"></script>
 </body>
+  
 </html>
