--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         "width=device-width, initial-scale=1.0">
     <title>PONG GAME</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="pong.ico">
 </head>
   
 <body>
